--- a/src/app/component/search-form/search-form.component.html
+++ b/src/app/component/search-form/search-form.component.html
@@ -1,1 +1,9 @@
-<p>search-form works!</p>
+<div class="container">
+  <form #searchForm="ngForm">
+    <div class="form-group">
+      <input type="text" class="form-control" name="findGit" placeholder="Search"  required>
+      <button type="submit" class="btn"> Search</button>
+    </div>
+  </form>
+</div>
+
