created repository template

--- a/src/app/component/repository/repository.component.html
+++ b/src/app/component/repository/repository.component.html
@@ -1,1 +1,31 @@
-<p>repository works!</p>
+<div class="container">
+  <div class="row search">
+    <div class="col-md-9 search-form text-center">
+      <app-search-form></app-search-form>
+      <br>
+    </div>
+    </div>
+    <div class="row main-content">
+      <div class="col-md-10 user-details">
+        <div class="table table-stripped">
+          <table class="table">
+          <tbody>
+            <tr>
+              <td>
+                <h4></h4>
+                <p>Repository Owner</p>
+                <p>Date Created</p>
+                <p> Description</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <hr>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-10 loadMorebtn">
+      <button class="btn btn-info">See more</button>
+    </div>
+
+  </div>
