--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="goals"><b>GOALS APP</b></a>
+  <a class="navbar-brand" routerLink="goals"><b>GITHUB SEARCH</b></a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" routerLink="goals" routerLinkActive="active">Goals<span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active"> About</a>
+      <a class="nav-item nav-link active" routerLink="goals" routerLinkActive="active">Find users<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active"> Find repositories</a>
     </div>
   </div>
 </nav>
