--- a/src/app/component/repository/repository.component.css
+++ b/src/app/component/repository/repository.component.css
@@ -1,37 +1,28 @@
-input {
-  width: 100%;
- padding: 12px;
- border: 1px solid #ccc;
- border-radius: 4px;
- box-sizing: border-box;
- margin-top: 6px;
- margin-bottom: 16px;
+.container{
+  margin-top: 5rem;
+}
+p {
+  text-indent: 2rem;
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+.btn{
+  margin-top: 30px;
+  background-color: #056b5b;
 }
 
-
-input[type=submit] {
- background-color: #056b5b;
- color: white;
- text-align: center;
- /* width: 50%; */
+.loadMorebtn {
+  text-align: center;
+}
+.display{
+  float: left;
+  margin-bottom: 0.3rem;
 }
 
-
-button {
- background-color: #056b5b;
- color: white;
- padding: 14px 20px;
- margin: 8px 0;
- border: none;
- cursor: pointer;
- /* width: 100%; */
- opacity: 0.9;
-}
-
-
-
-form {
- background-color: #f1f1f1;
- padding: 20px;
- width: 100vh;
+/*search form*/
+.search-form p {
+  font-size: 30px;
+  margin: 0;
+  justify-content: left;
+  align-items: left;
+  /*position: sticky;*/
 }
