--- a/src/app/component/search-form/search-form.component.html
+++ b/src/app/component/search-form/search-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form (ngSubmit)="lookFor('')" #searchForm="">
+  <form (ngSubmit)="searchFor(searchForm)" #searchForm='ngForm'>
     <div class="form-group">
       <input type="text" class="form-control" name="name" placeholder="Enter repository name"  required>
       <button type="submit" class="btn"> Search</button>
