--- a/src/app/component/repository/repository.component.html
+++ b/src/app/component/repository/repository.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row search">
     <div class="col-md-9 search-form text-center">
-      <app-search-form></app-search-form>
+      <app-search-form (getName)="searchRepos($event)"></app-search-form>
       <br>
     </div>
     </div>
@@ -10,12 +10,12 @@
         <div class="table table-stripped">
           <table class="table">
           <tbody>
-            <tr>
+            <tr *ngFor="let repository of gitRepoRequest.searchRepo">
               <td>
-                <h4></h4>
-                <p>Repository Owner</p>
-                <p>Date Created</p>
-                <p> Description</p>
+                <h4><a style="text-align: center" href="{{repository.html_url}}"></a></h4>
+                <p>Repository Owner: <a href="{{repository.owner.html_url}}">{{repository.owner.login}}</a></p>
+                <p>Date Created: {{repository.created_at|date}}</p>
+                <p>Description: {{repository.description}}</p>
               </td>
             </tr>
           </tbody>
