--- a/src/app/component/search-form/search-form.component.html
+++ b/src/app/component/search-form/search-form.component.html
@@ -1,9 +1,11 @@
 <div class="container">
+  <div class="row">
   <form (ngSubmit)="searchFor(searchForm)" #searchForm='ngForm'>
     <div class="form-group">
-      <input type="text" class="form-control" name="find" placeholder="Enter repository name" [(ngModel)]="searchInfo.find" #find="ngModel" required>
+      <input type="text" class="form-control" name="find" placeholder="Enter user name" [(ngModel)]="searchInfo.find" #find="ngModel" required>
       <button type="submit" class="btn"> Search</button>
     </div>
   </form>
+  </div>
 </div>
 
