--- a/src/app/component/search-form/search-form.component.html
+++ b/src/app/component/search-form/search-form.component.html
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row">
-  <form (ngSubmit)="searchFor(searchForm)" #searchForm='ngForm'>
+    <div class="col-sm-1">
+  <form #searchForm='ngForm'>
     <div class="form-group">
-      <input type="text" class="form-control" name="find" placeholder="Enter user name" [(ngModel)]="searchInfo.find" #find="ngModel" required>
-      <button type="submit" class="btn"> Search</button>
+      <input type="text" class="form-control" name="find" placeholder="Enter user name" [(ngModel)]="searchName" #find="ngModel" required>
+      <button class="btn btn-info" (click)="search()"> Search</button>
     </div>
   </form>
+  </div>
   </div>
 </div>
 
