--- a/src/app/component/search-form/search-form.component.css
+++ b/src/app/component/search-form/search-form.component.css
@@ -13,23 +13,18 @@ input[type=submit] {
  background-color: #056b5b;
  color: white;
  text-align: center;
- /* width: 50%; */
 }
 
 
 button {
- background-color: #056b5b;
+ background-color: #24056b;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
- /* width: 100%; */
  opacity: 0.9;
 }
-
-
-
 form {
  background-color: #f1f1f1;
  padding: 20px;
