--- a/src/app/component/user/user.component.css
+++ b/src/app/component/user/user.component.css
@@ -1,35 +1,119 @@
-table {
-  border-collapse: collapse;
-  width: 100%;
+.overlay{
+  background-color: rgba(0, 0, 0, 0.5);
+  margin-top:1%;
+  color: white;
 }
-/*.table-striped > tbody > tr:nth-child(2n+1) > td, .table-striped > tbody > tr:nth-child(2n+1) > th {*/
-  /*background-color: red;*/
-/*}*/
-/*github user repos*/
-.my-repos p {
-  text-indent: 3rem;
+img{
+  width: 100%;
+  border-radius: 8px;
+}
+.card{
+  background-color: rgba(47, 5, 146, 0.6);
   text-align: left;
 }
-.desc{
-  text-align: center;
+.repo{
+  background-color:rgba(239, 232, 255, 0.705);
+  color: black;
+  margin-bottom: 2%;
+  border-radius: 4px; 
+  box-shadow: 3px 3px 5px black;
 }
-tr {
-  font-size: 16px;
-}
-a:hover {
+a{
   text-decoration: none;
 }
-td a {
-  font-size: 25px;
+.content{
+  margin-top: 1.3%;
+  margin-bottom: 0.5%;
+}
+.user{
+  margin-left:1;
+  margin-top: 1%;
+}
+#imgcard{
+  margin-top: 1%;
+  margin-bottom: 3%;
+  border-radius: 8px;
+  margin-right: 5%;
+}
+p{
+  font-size: 18px;
+}
+.name{
+  font-size: 18px;
+}
+.btn{
+  margin-top: -1%;
+  float: right;
+}
+.allrepos{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+hr{
+  background-color: rgb(236, 231, 241);
+  height: 1px;
+}
+.desc{
+  min-height: 95px;
+}
+.top{
+  font-weight: bold;
+}
+.btn-group{
+  margin-left: 13px;
+}
+#visit a{
+  text-decoration: none;
+  color: beige;
+}
+.repos h2{
+  font-size: 45px;
+  margin-bottom: 2%;
+  font-family: 'Berkshire Swash', cursive;
+}
+#mouse-click{
+  margin-top: -2%;
+  padding-bottom: 30px; 
+  /* animation-iteration-count: infinite; */
+}
+#mouse-click {
+  animation: bounce 2s infinite;
 }
 
-p {
-  text-indent: 2rem;
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-35px);
+  }
+  60% {
+    transform: translateY(-25px);
+  }
 }
-
-.col-md-12 {
-  text-align: center;
+#click img{
+  width: 20px;
+  height: 60px;
 }
-.container {
-  margin-top: 2rem;
+.follow{
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.555);
+  padding: 1%;
+  float: right;
+  margin-right: 20%;
+}
+.datejoined{
+  float: right;
+  margin-right: 14%;
+}
+#profile{
+  font-size: 14px;
+  color: rgb(255, 255, 255);
+}
+.forks{
+  font-size: 10px;
+}
+#created{
+  font-weight: 400;
 }
