--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -1,66 +1,59 @@
-<div class="container">
-  <div class="row ">
-    <div class="col-md-12">
+<div class="container-fluid">
+    <hr>
       <app-search-form (getName)='findUser($event)'></app-search-form>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-7">
-      <div class="table table-striped table-bordered">
-        <h3> {{users.name}}</h3>
-        <table class="table table-striped table-light">
-          <tbody>
-          <tr>
-            <th scope="row">Github Username:</th>
-              <td> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></td>
-
-          </tr>
-          <tr>
-            <th scope="row">Repositories:</th>
-            <td>{{users.public_repos }}</td>
-          </tr>
-          <tr>
-            <th scope="row">Date created:</th>
-            <td>{{users.created_at | date}}</td>
-          </tr>
-          <tr>
-            <th scope="row">Followers:</th>
-            <td>{{users.followers}}</td>
-          </tr>
-          <tr>
-            <th scope="row">Following</th>
-            <td>{{users.following}}</td>
-          </tr>
-          </tbody>
-        </table>
+    
+  <div class="container content ">
+    <div class="row">
+      <div class="col-sm-5 image-end">
+        <img src="{{users.avatar_url}}">
+      </div>
+      <div class="card-body">
+        <span class="name"> &nbsp;{{users.name}}</span>
+        </div>
+        </div>
+        <div class="col-sm-7 user">
+          <div class="card">
+          <div class="card-body">
+            <span class="name">Github Username:</span>
+              <p> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></p>
+            <p>Repositories:</p>
+            <hr>
+            <p>{{users.public_repos }}</p>
+            <hr>
+            <p>Date created:</p>
+            <p>{{users.created_at | date}}</p>
+            <hr>
+            <p>Followers:</p>
+            <p>{{users.followers}}</p>
+            <hr>
+            <p>Following</p>
+            <p>{{users.following}}</p>
+          </div>
+          </div>
+          </div>
+          </div> 
+          
+<hr>
+<section class="bg-dark text-light" >
+<div class="text-center repos" id="reps">
+  <h2> User Repositories</h2>
+</div>
+<div class="container allrepos">
+<div class="card" appHighlight *ngFor="let repository of userRepos.newRepository" style="width: 22rem;" class="repo">
+  <div class="card-body" >
+    <h5 class="card-title"><span class="top">Repository Name:</span> &nbsp;{{repository.name}} </h5>
+    <div class="card-text">
+      <hr>
+      <div class="desc"><span class="top">Description:</span> &nbsp;{{repository.description}} 
+      </div>
+      <hr>
+      <div class="card-subtitle mb-2">
+          <span class="top">Language: </span> {{repository.language}}
+      </div>
+      <div class="card-subtitle mb-2"><span class="top">Created:&nbsp; <span id="created">{{repository.created_at | date}}</span> &nbsp;  On:</span> &nbsp;{{repository.created_at | date}}
       </div>
     </div>
-    <div class="col-md-5 image-end">
-      <img src="{{users.avatar_url}}">
     </div>
-  </div>
-  <hr>
-</div>
-<div class="container">
-  <div class="row">
-    <div  class="col-md-12">
-      <h2 style="color: #24056b" > User Repositories</h2>
-      <div class="table table-striped">
-        <table class="table">
-          <tbody>
-          <tr *ngFor='let repository of userRepos.newRepository'>
-            <td>
-                <a href="{{repository.html_url}}" target="_blank" >{{repository.name}}</a>
-
-                <br>
-              <p class="desc">Description: {{repository.description}}</p>
-              <br>
-              <p>Date Created: {{repository.created_at | date}}</p>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
     </div>
-  </div>
-</div>
+    </div>
+</section>
