--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -12,7 +12,7 @@
         </div>
         </div>
         <div class="col-sm-7 user">
-          <div class="card">
+          <div class="card" appHighlight>
           <div class="card-body">
             <span class="name">Github Username:</span>
               <p> <a href="{{users.html_url}}" target="_blank">{{users.login}}</a></p>
