--- a/src/app/component/search-form/search-form.component.css
+++ b/src/app/component/search-form/search-form.component.css
@@ -1,5 +1,5 @@
 input {
-  width: 100%;
+ width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
@@ -17,7 +17,7 @@ input[type=submit] {
 
 
 button {
- background-color: #24056b;
+ background-color:  rgb(45, 0, 128);
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
