--- a/src/app/component/user/user.component.html
+++ b/src/app/component/user/user.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+  <ng-progress></ng-progress>
     <hr>
       <app-search-form (getName)='findUser($event)'></app-search-form>
     
