added about page

--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,1 +1,5 @@
-<p>about works!</p>
+<div class="h-100 p-5 text-white bg-dark rounded-3">
+  <h1 class="display-4 text-center">About Github Search App</h1>
+  <hr class="my-4">
+  <p class="lead text-center">An Angular app that let's you search for your github username and see people's public repositories.</p>
+</div>
