--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -7,6 +7,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink="users" routerLinkActive="active">Find users<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" routerLink="repositories" routerLinkActive="active"> Find repositories</a>
+      <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active"> About</a>
     </div>
   </div>
 </nav>
