added about routing

--- a/src/app/component/repository/repository.component.html
+++ b/src/app/component/repository/repository.component.html
@@ -1,4 +1,5 @@
   <div class="container-fluid">
+    <ng-progress></ng-progress>
     <br>
     <app-search-form (getName)="searchRepos($event)"></app-search-form>
     <br>
